# pytorch-tabr

./: .flake8  .gitignore  README.md  classification.ipynb  dataloader.ipynb  forest.ipynb  multiclass.ipynb  pyproject.toml  regression.ipynb  training.ipynb
.github/workflows/: ci.yml
pytorch_tabr/: __init__.py  arch.py  base_model.py  callbacks.py  dataloader.py  embeddings.py  metrics.py  models.py  sparsemax.py
tabr/: __init__.py  arch.py  base_model.py  embeddings.py  model.py  models.py  trainer.py  utils.py
tests/: test_basic.py  test_integration.py
