[tool.poetry]
name = "pytorch_tabr"
version = "0.1.0"
description = ""
authors = ["Eduardo Carvalho Pinto"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "1.26.0"
torch = ">=2.0.0, !=2.0.1"
torchvision = "^0.15.1,!=0.15.2"
black = "^23.9.1"
flake8 = "^6.1.0"
notebook = "^7.0.4"
tqdm = "^4.66.1"
einops = "^0.7.0"
scikit-learn = "^1.3.1"
plotly = "^5.17.0"
pandas = "^2.1.1"
ipywidgets = "^8.1.1"
xgboost = "^2.0.0"
delu = "^0.0.22"
ipython = "^8.17.2"
faiss-gpu = "^1.7.2"
ucimlrepo = "^0.0.3"
catboost = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"